# birdclef2026

./: .gitignore  CLAUDE.md  OVERVIEW.md  WINNING_SOLUTION_2025.md  pyproject.toml
experiments/: README.md
experiments/_archive_2025/: exp10_ensemble.py  exp11_5s_baseline.py  exp12_inference_opt.py  exp13_multi_backbone.py  exp14_aug_v2.py  exp15_proper_st.py  exp16_soft_auc.py  exp17_convnext_gem.py  exp17_gem_pool.py  exp18_sampling_warmrestart.py  exp19_dedicated_taxa.py  exp1_eda.py  exp2_sed_baseline.py  exp3_sed_v2.py  exp4_extract_perch.py  exp4_perch_kd.py  exp5_self_training.py  exp6_b3_20s.py  exp7_st_v2.py  exp8_focal_loss.py  exp9_aug_st2.py
experiments/_archive_2026_audiomae_dead_end/: exp143c_save_probe.py  exp143d_audiomae_external_probe.py  exp143e_probe_arch_sweep.py  exp143g_save_ensemble_probe.py  exp144_full_diagnostic.py  exp146_dann_probe.py  exp146c_mlp_m3_blend.py
experiments/_archive_2026_dpo_dead_end/: exp104_pnew_loso_site.py  exp105_pnew_perch_init.py  exp106b_blend.py  exp107_rarity_hour.py  exp107_results.md  exp107b_clean_loso.py  exp109_deep_failure.py  exp116_rlaif.py  (+17 more)
paper/: eda.tex  exp_current.tex  experiments.tex
scripts/: patch_notebook_exp44c.py  patch_notebook_exp45c.py  patch_notebook_sed38.py  patch_notebook_v15.py  patch_notebook_v16_sedonly.py  patch_notebook_v17_pseudo.py  run_exp.sh  run_exp1.sh  run_exp10.sh  run_exp11.sh  run_exp11_to_15.sh  run_exp12.sh  run_exp13.sh  run_exp14.sh  run_exp15.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh  run_exp6.sh  run_exp7.sh  run_exp8.sh  run_exp9.sh  run_lb_sweep.sh
(+281 files in other folders)
